--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^14.2.4",
     "patch-package": "^8.0.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "recharts": "^2.15.1",
