--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "15.0.5",
     "patch-package": "^8.0.0",
     "quill": "^2.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
